2003-11-23  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/libarikkei/arikkei-strlib.c: New file, implement localeless
	strtod and dtostr here

	* src/libarikkei/arikkei-strlib.h: New file

2003-11-15  Mitsuru Oka  <oka326@parkcity.ne.jp>

	* src/sp-object.c (sp_object_build): Parse xml:space
	(sp_object_private_set): Ditto
	(sp_xml_get_space_string): New helper
	(sp_object_private_write): Write xml:space

	* src/sp-object.h: Added xml:space attribute

	* src/sp-text.c: Handle xml:space

	* src/xml/repr-io.c: Parse xml:space

2003-11-20  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/dialogs/desktop-properties.c (sp_dtw_update): Added page and
	border colors

	* src/sp-namedview.c (sp_namedview_set): Parse page and border colors

	* src/desktop.c (sp_dt_namedview_modified): Set page and border colors

2003-11-18  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/helper/sp-canvas.h: Use NRPixBlock in canvas buffer

2003-11-16  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/libnr/nr-types.h: Separate cases for HAVE_INTTYPES_H,
	HAVE_NR_CONFIG_H and remaining (i.e. Win32)

	* src/libnr/nr-compose.c: Wrap config.h into HAVE_CONFIG_H

	* src/libnr/nr-compose-transform.c: Ditto

	* src/dialogs/transformation.c (sp_transformation_dialog_new): Added
	'Apply to duplicate' checkbox
	(sp_transformation_dialog_apply): Test for duplication
	(sp_transformation_page_move_new): Removed relative checkbox, instead
	all moves are relative now

	* src/selection-chemistry.c (sp_selection_scale_relative): Signature
	change, support duplication
	(sp_selection_rotate_relative): Ditto
	(sp_selection_move_relative): Ditto

	* src/interface.c (sp_ui_edit_menu): Added SP_VERB_EDIT_REPEAT

	* configure.in: Check for inttypes.h header (i.e. ISO C 99)

	* src/sodipodi.c (sodipodi_verb_perform): Save config

	* src/selection-chemistry.c (sp_selection_action_perform): Moved here
	(sp_selection_perform_transform): New handler