@@ -147,12 +147,12 @@ sp_document_undo (SPDocument *doc)
 		return;
 	}
 
-	if (doc->priv->undo == NULL) return;
-
-	log = (SPReprAction *) doc->priv->undo->data;
-	doc->priv->undo = g_slist_remove (doc->priv->undo, log);
-	sp_repr_undo_log (doc->rdoc, log);
-	doc->priv->redo = g_slist_prepend (doc->priv->redo, log);
+	if (doc->priv->undo) {
+		log = (SPReprAction *) doc->priv->undo->data;
+		doc->priv->undo = g_slist_remove (doc->priv->undo, log);
+		sp_repr_undo_log (doc->rdoc, log);
+		doc->priv->redo = g_slist_prepend (doc->priv->redo, log);
+	}
 
 	sp_repr_begin_transaction (doc->rdoc);
 }
@@ -177,12 +177,12 @@ sp_document_redo (SPDocument *doc)
 		return;
 	}
 
-	if (doc->priv->redo == NULL) return;
-
-	log = (SPReprAction *) doc->priv->redo->data;
-	doc->priv->redo = g_slist_remove (doc->priv->redo, log);
-	sp_repr_replay_log (doc->rdoc, log);
-	doc->priv->undo = g_slist_prepend (doc->priv->undo, log);
+	if (doc->priv->redo) {
+		log = (SPReprAction *) doc->priv->redo->data;
+		doc->priv->redo = g_slist_remove (doc->priv->redo, log);
+		sp_repr_replay_log (doc->rdoc, log);
+		doc->priv->undo = g_slist_prepend (doc->priv->undo, log);
+	}
 
 	sp_repr_begin_transaction (doc->rdoc);
 }
